--- a/index.HTML
+++ b/index.HTML
@@ -415,7 +415,7 @@ top:2px;
   
 <div class="map">
 <SPAN class="logo">Hungry&nbsp&nbspPoint</span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-<A HREF="PROJECT.HTML">HOME</A>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<A HREF="index.html">HOME</A>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp
 <A HREF="food.html">MENU</A>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp&nbsp&nbsp
